siril-1.4.1
--/--/--
**Fixes**
* Fixes build error when compiled without libgit2, libjpeg and libcurl (#1886, #1887, #1888, #1889)

siril-1.4.0
12/05/25
**Improvements**
* SirilInterface.get_selection_star() now attempts accurate photometry when computing the PSF (!961)

**Fixes**
* Fixed get_image_history(): now correctly updates history with operations done since loading
* Fixed RGB composition: compressed FITS files (.fit.fz, .fits.fz) not appearing in file selector (#1878)
* Fixed Gaia online catalogue status indicator (!963)
* Fixed catsearch function for solar system objects (#1882)
* Fixed cleaning python related environment variables within Siril app for Windows (#1880)
* Fixed empty csv file exported by conesearch command when called from script (#1885)

siril 1.4.0-RC2
11/20/25

**Fixes**
* Fixed typo in platesolve tooltip
* Fixed error in meson configuration
* Fixed writing registration information for the reference image with global registration (#1849)
* Fixed shared memory leak in set_seq_frame_pixeldata()
* Fixed crash with intel macOS because of a bad pragma simd clause (#1856)
* Updated log messages to avoid double newlines
* Fixed rejection stacking for sequence in 16b (#1858)
* Increase sirilpy timeouts
* Fixed rejection stacking for sequence in 16b (#1858)
* Attempted fix for memory allocation issue during stacking on Windows (#1858, #1866)
* Fixed regression in pixelmath where FITS header keywords were not properly copied from the source image to the result (#1851)

siril 1.4.0-RC1
11/08/25

**Fixes:**
* Fixed wrong interpretation of bayer pattern after a background extraction on CFA images (#1799)
* Fixed unnecessary range clipping/scaling prior to RGB channel extraction (#1797)
* Fixed issue with sequence filename construction if com.pref.ext didn't match the seq (#1796)
* Fixed issue where curves tool preview could fail to disapply (#1801)
* Fixed global registration failed to add reference image to the aligned sequence (#1798)